# messenger-notifier

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  FEISHU_TROUBLESHOOTING.md  LICENSE  README.md  docker-compose.yml  env_for_docker  pyproject.toml  requirements.txt
.claude/agents/: architecture-maintainer.md  code-writer-optimizer.md  debug-environment-manager.md  git-repository-manager.md  task-orchestrator.md
src/: __init__.py  main.py
src/adapters/: __init__.py  feishu.py  telegram.py
src/config/: __init__.py  settings.py
src/routers/: __init__.py  notifier.py
